--- a/SpotTheScam/Web.config
+++ b/SpotTheScam/Web.config
@@ -4,7 +4,12 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
-  <system.web>
+	<connectionStrings>
+		<add name="SpotTheScamConnectionString"
+			 connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=S:\NYP\Y3S1\BIPJ\SPOTTHESCAM\SPOTTHESCAM\SPOTTHESCAM\DATABASE\SPOTTHESCAMDB.MDF;Integrated Security=True"
+			 providerName="System.Data.SqlClient" />
+	</connectionStrings>
+	<system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
   </system.web>
