--- a/SpotTheScam/SpotTheScam.csproj
+++ b/SpotTheScam/SpotTheScam.csproj
@@ -73,7 +73,8 @@
     <Content Include="Logout.aspx" />
     <Content Include="Register.aspx" />
     <Content Include="Web.config" />
-    <Content Include="WebForm2.aspx" />
+    <Content Include="WebForm1.aspx" />
+    <Content Include="StaffExpertWebinar.aspx" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Default.aspx.cs">
@@ -126,12 +127,19 @@
     <Compile Include="Staff.Master.designer.cs">
       <DependentUpon>Staff.Master</DependentUpon>
     </Compile>
-    <Compile Include="WebForm2.aspx.cs">
-      <DependentUpon>WebForm2.aspx</DependentUpon>
+    <Compile Include="WebForm1.aspx.cs">
+      <DependentUpon>WebForm1.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="WebForm2.aspx.designer.cs">
-      <DependentUpon>WebForm2.aspx</DependentUpon>
+    <Compile Include="WebForm1.aspx.designer.cs">
+      <DependentUpon>WebForm1.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="StaffExpertWebinar.aspx.cs">
+      <DependentUpon>StaffExpertWebinar.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="StaffExpertWebinar.aspx.designer.cs">
+      <DependentUpon>StaffExpertWebinar.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
