--- a/SpotTheScam/Web.config
+++ b/SpotTheScam/Web.config
@@ -6,7 +6,7 @@
 <configuration>
 	<connectionStrings>
 		<add name="SpotTheScamConnectionString"
-			 connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=S:\NYP\Y3S1\BIPJ\SpotTheScam\SpotTheScam\SpotTheScam\Database\SpotTheScamDB.mdf;Integrated Security=True"
+			 connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\wongd\source\repos\SpotTheScam\SpotTheScam\Database\SpotTheScamDB.mdf;Integrated Security=True"
 			 providerName="System.Data.SqlClient" />
 	</connectionStrings>
 	<system.web>
