Moved the database to App_Data and updated Web.config to use |DataDirectory|.
No longer need to edit config file each time after pulling in
a new version

--- a/SpotTheScam/Web.config
+++ b/SpotTheScam/Web.config
@@ -5,8 +5,9 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="SpotTheScamConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\wongd\source\repos\SpotTheScam\SpotTheScam\Database\SpotTheScamDB.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+	  <add name="SpotTheScamConnectionString"
+		   connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\SpotTheScamDB.mdf;Integrated Security=True"
+		   providerName="System.Data.SqlClient" />  </connectionStrings>
   <appSettings>
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
   </appSettings>
