--- a/SpotTheScam/Web.config
+++ b/SpotTheScam/Web.config
@@ -6,7 +6,7 @@
 <configuration>
   <connectionStrings>
 	  <add name="SpotTheScamConnectionString"
-		   connectionString="Data Source=C:\Users\MikeDelta\source\repos\SpotTheScam\SpotTheScam\Database\SpotTheScamDB.mdf;Integrated Security=True"
+		   connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\SpotTheScamDB.mdf;Integrated Security=True"
 		   providerName="System.Data.SqlClient" />  </connectionStrings>
   <appSettings>
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
