--- a/SpotTheScam/SpotTheScam.csproj
+++ b/SpotTheScam/SpotTheScam.csproj
@@ -75,7 +75,7 @@
     <Content Include="User\UserRegister.aspx" />
     <Content Include="Web.config" />
     <Content Include="WebForm1.aspx" />
-    <Content Include="StaffExpertWebinar.aspx" />
+    <Content Include="Staff\StaffExpertWebinar.aspx" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Staff\ManageUsers.aspx.cs">
@@ -149,13 +149,10 @@
     <Compile Include="User\User.Master.designer.cs">
       <DependentUpon>User.Master</DependentUpon>
     </Compile>
-    <Compile Include="StaffVideoCall.aspx.cs">
-      <DependentUpon>StaffVideoCall.aspx</DependentUpon>
+    <Compile Include="Staff\StaffVideoCall.aspx.cs">
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="StaffVideoCall.aspx.designer.cs">
-      <DependentUpon>StaffVideoCall.aspx</DependentUpon>
-    </Compile>
+    <Compile Include="Staff\StaffVideoCall.aspx.designer.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Staff\Staff.Master" />
