--- a/SpotTheScam/SpotTheScam.csproj
+++ b/SpotTheScam/SpotTheScam.csproj
@@ -64,11 +64,15 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Images\expert1.jpg" />
+    <Content Include="Staff\StaffVideoCallSession.aspx" />
     <Content Include="Staff\ManageUsers.aspx" />
     <Content Include="Staff\StaffDashboard.aspx" />
     <Content Include="Staff\StaffExpertWebinar.aspx" />
     <Content Include="Staff\StaffLogin.aspx" />
     <Content Include="Staff\StaffLogout.aspx" />
+    <Content Include="User\UserSessions.aspx" />
+    <Content Include="User\ExpertWebinarHomepage.aspx" />
     <Content Include="User\UserHome.aspx" />
     <Content Include="Images\logo.svg" />
     <Content Include="User\UserLogin.aspx" />
@@ -78,6 +82,13 @@
     <Content Include="WebForm1.aspx" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Staff\StaffVideoCallSession.aspx.cs">
+      <DependentUpon>StaffVideoCallSession.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Staff\StaffVideoCallSession.aspx.designer.cs">
+      <DependentUpon>StaffVideoCallSession.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Staff\ManageUsers.aspx.cs">
       <DependentUpon>ManageUsers.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -112,6 +123,20 @@
     </Compile>
     <Compile Include="Staff\StaffLogout.aspx.designer.cs">
       <DependentUpon>StaffLogout.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="User\UserSessions.aspx.cs">
+      <DependentUpon>UserSessions.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="User\UserSessions.aspx.designer.cs">
+      <DependentUpon>UserSessions.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="User\ExpertWebinarHomepage.aspx.cs">
+      <DependentUpon>ExpertWebinarHomepage.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="User\ExpertWebinarHomepage.aspx.designer.cs">
+      <DependentUpon>ExpertWebinarHomepage.aspx</DependentUpon>
     </Compile>
     <Compile Include="User\UserHome.aspx.cs">
       <DependentUpon>UserHome.aspx</DependentUpon>
