--- a/SpotTheScam/SpotTheScam.csproj
+++ b/SpotTheScam/SpotTheScam.csproj
@@ -65,7 +65,10 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
+    <Content Include="User\PhoneScamsQuiz.aspx" />
+    <Content Include="User\QuizCompletion.aspx" />
     <Content Include="User\Quizzes.aspx" />
+    <Content Include="User\RecoverySupport.aspx" />
     <Content Include="User\UserWebinarRegistration.aspx" />
     <Content Include="User\UserWebinarSessionListing.aspx" />
     <Content Include="User\ExpertWebinarHomepage.aspx" />
@@ -89,12 +92,33 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="User\PhoneScamsQuiz.aspx.cs">
+      <DependentUpon>PhoneScamsQuiz.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="User\PhoneScamsQuiz.aspx.designer.cs">
+      <DependentUpon>PhoneScamsQuiz.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="User\QuizCompletion.aspx.cs">
+      <DependentUpon>QuizCompletion.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="User\QuizCompletion.aspx.designer.cs">
+      <DependentUpon>QuizCompletion.aspx</DependentUpon>
+    </Compile>
     <Compile Include="User\Quizzes.aspx.cs">
       <DependentUpon>Quizzes.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="User\Quizzes.aspx.designer.cs">
       <DependentUpon>Quizzes.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="User\RecoverySupport.aspx.cs">
+      <DependentUpon>RecoverySupport.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="User\RecoverySupport.aspx.designer.cs">
+      <DependentUpon>RecoverySupport.aspx</DependentUpon>
     </Compile>
     <Compile Include="User\UserWebinarRegistration.aspx.cs">
       <DependentUpon>UserWebinarRegistration.aspx</DependentUpon>
