added module view for users

--- a/SpotTheScam/SpotTheScam.csproj
+++ b/SpotTheScam/SpotTheScam.csproj
@@ -71,6 +71,7 @@
     <Content Include="User\FakeUOBLogin.aspx" />
     <Content Include="User\Quizzes.aspx" />
     <Content Include="User\UserBlog.aspx" />
+    <Content Include="User\UserModules.aspx" />
     <Content Include="User\UserWebinarRegistration.aspx" />
     <Content Include="User\UserWebinarSessionListing.aspx" />
     <Content Include="User\ExpertWebinarHomepage.aspx" />
@@ -134,6 +135,13 @@
     </Compile>
     <Compile Include="User\UserBlog.aspx.designer.cs">
       <DependentUpon>UserBlog.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="User\UserModules.aspx.cs">
+      <DependentUpon>UserModules.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="User\UserModules.aspx.designer.cs">
+      <DependentUpon>UserModules.aspx</DependentUpon>
     </Compile>
     <Compile Include="User\UserWebinarRegistration.aspx.cs">
       <DependentUpon>UserWebinarRegistration.aspx</DependentUpon>
