--- a/SpotTheScam/SpotTheScam.csproj
+++ b/SpotTheScam/SpotTheScam.csproj
@@ -67,7 +67,11 @@
     <Content Include="Global.asax" />
     <Content Include="User\FakeOCBCLogin.aspx" />
     <Content Include="User\FakeUOBLogin.aspx" />
+    <Content Include="User\PhoneScamsQuiz.aspx" />
+    <Content Include="User\QuizCompletion.aspx" />
     <Content Include="User\Quizzes.aspx" />
+    <Content Include="User\RecoverySupport.aspx" />
+    <Content Include="User\ScamRecoveryGuidance.aspx" />
     <Content Include="User\UserWebinarRegistration.aspx" />
     <Content Include="User\UserWebinarSessionListing.aspx" />
     <Content Include="User\ExpertWebinarHomepage.aspx" />
@@ -105,12 +109,40 @@
     <Compile Include="User\FakeUOBLogin.aspx.designer.cs">
       <DependentUpon>FakeUOBLogin.aspx</DependentUpon>
     </Compile>
+    <Compile Include="User\PhoneScamsQuiz.aspx.cs">
+      <DependentUpon>PhoneScamsQuiz.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="User\PhoneScamsQuiz.aspx.designer.cs">
+      <DependentUpon>PhoneScamsQuiz.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="User\QuizCompletion.aspx.cs">
+      <DependentUpon>QuizCompletion.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="User\QuizCompletion.aspx.designer.cs">
+      <DependentUpon>QuizCompletion.aspx</DependentUpon>
+    </Compile>
     <Compile Include="User\Quizzes.aspx.cs">
       <DependentUpon>Quizzes.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="User\Quizzes.aspx.designer.cs">
       <DependentUpon>Quizzes.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="User\RecoverySupport.aspx.cs">
+      <DependentUpon>RecoverySupport.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="User\RecoverySupport.aspx.designer.cs">
+      <DependentUpon>RecoverySupport.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="User\ScamRecoveryGuidance.aspx.cs">
+      <DependentUpon>ScamRecoveryGuidance.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="User\ScamRecoveryGuidance.aspx.designer.cs">
+      <DependentUpon>ScamRecoveryGuidance.aspx</DependentUpon>
     </Compile>
     <Compile Include="User\UserWebinarRegistration.aspx.cs">
       <DependentUpon>UserWebinarRegistration.aspx</DependentUpon>
