--- a/SpotTheScam/Web.config
+++ b/SpotTheScam/Web.config
@@ -9,16 +9,15 @@
 			 connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\SpotTheScamDB.mdf;Integrated Security=True;Connect Timeout=30"
 			 providerName="System.Data.SqlClient" />
 	</connectionStrings>
-
 	<appSettings>
 		<add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
 	</appSettings>
-
 	<system.web>
 		<compilation debug="true" targetFramework="4.7.2" />
 		<httpRuntime targetFramework="4.7.2" />
+		<!-- ADDED: Session state configuration for WebMethods to work properly -->
+		<sessionState mode="InProc" cookieless="false" timeout="20" />
 	</system.web>
-
 	<system.codedom>
 		<compilers>
 			<compiler
