--- a/SpotTheScam/SpotTheScam.csproj
+++ b/SpotTheScam/SpotTheScam.csproj
@@ -64,6 +64,7 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Staff\EditModule.aspx" />
     <Content Include="Global.asax" />
     <Content Include="Staff\StaffAddModules.aspx" />
     <Content Include="Staff\ViewModules.aspx" />
@@ -71,7 +72,7 @@
     <Content Include="User\CreateBlog.aspx" />
     <Content Include="User\FakeOCBCLogin.aspx" />
     <Content Include="User\FakeUOBLogin.aspx" />
-    <Content Include="User\ModuleDetails.aspx" />
+    <Content Include="User\ModuleInformation.aspx" />
     <Content Include="User\Quizzes.aspx" />
     <Content Include="User\UserBlog.aspx" />
     <Content Include="User\UserModules.aspx" />
@@ -94,6 +95,13 @@
     <Content Include="User\WebinarRegistrationSuccess.aspx" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Staff\EditModule.aspx.cs">
+      <DependentUpon>EditModule.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Staff\EditModule.aspx.designer.cs">
+      <DependentUpon>EditModule.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -140,12 +148,12 @@
     <Compile Include="User\FakeUOBLogin.aspx.designer.cs">
       <DependentUpon>FakeUOBLogin.aspx</DependentUpon>
     </Compile>
-    <Compile Include="User\ModuleDetails.aspx.cs">
-      <DependentUpon>ModuleDetails.aspx</DependentUpon>
+    <Compile Include="User\ModuleInformation.aspx.cs">
+      <DependentUpon>ModuleInformation.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="User\ModuleDetails.aspx.designer.cs">
-      <DependentUpon>ModuleDetails.aspx</DependentUpon>
+    <Compile Include="User\ModuleInformation.aspx.designer.cs">
+      <DependentUpon>ModuleInformation.aspx</DependentUpon>
     </Compile>
     <Compile Include="User\Quizzes.aspx.cs">
       <DependentUpon>Quizzes.aspx</DependentUpon>
