Added Family Management page

--- a/SpotTheScam/SpotTheScam.csproj
+++ b/SpotTheScam/SpotTheScam.csproj
@@ -72,6 +72,7 @@
     <Content Include="User\CreateBlog.aspx" />
     <Content Include="User\FakeOCBCLogin.aspx" />
     <Content Include="User\FakeUOBLogin.aspx" />
+    <Content Include="User\FamilyGroupManagement.aspx" />
     <Content Include="User\ModuleInformation.aspx" />
     <Content Include="User\ModuleDetails.aspx" />
     <Content Include="User\PhoneScamsQuiz.aspx" />
@@ -153,6 +154,13 @@
     </Compile>
     <Compile Include="User\FakeUOBLogin.aspx.designer.cs">
       <DependentUpon>FakeUOBLogin.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="User\FamilyGroupManagement.aspx.cs">
+      <DependentUpon>FamilyGroupManagement.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="User\FamilyGroupManagement.aspx.designer.cs">
+      <DependentUpon>FamilyGroupManagement.aspx</DependentUpon>
     </Compile>
     <Compile Include="User\ModuleInformation.aspx.cs">
       <DependentUpon>ModuleInformation.aspx</DependentUpon>
